Update Settings “items”

--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -1,10 +1,9 @@
----
 items:
   - text: Menu One
     url: "#"
   - text: Menu Two
     url: "#"
   - text: Menu Three
-    url: "#"
+    url: /teste
   - text: Blog
-    url: "/blog"
+    url: /blog
